--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,12 @@
 /Ex_1.class
 /Ex_2.class
 /Ex_3.class
+/Ex4.class
+/Ex4$Evento.class
+/Ex4$Palestra.class
+/Ex4$Palestrante.class
+/Ex4$Responsavel.class
+/Evento.class
+/Palestra.class
+/Palestrante.class
+/Responsavel.class
