--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -10,3 +10,10 @@
 /Palestra.class
 /Palestrante.class
 /Responsavel.class
+/Ex_5.class
+/Colaborador.class
+/Empresa.class
+/Filial.class
+/Matriz.class
+/Pessoa.class
+/Socio.class
